<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Train Sprint</string>

    <string name="loading">Loading</string>

    <string name="balance">BALANCE</string>
    <string name="bet">BET</string>
    <string name="win">WIN</string>
    <string name="spin">SPIN</string>
    <string name="auto">AUTO</string>
    <string name="turbo">TURBO</string>

    <string name="jp_grand">GRAND</string>
    <string name="jp_major">MAJOR</string>
    <string name="jp_minor">MINOR</string>
    <string name="jp_mini">MINI</string>

    <string name="settings">Settings</string>
    <string name="sound">Sound</string>
    <string name="music">Music</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="support">Support</string>
    <string name="reset_balance">Reset Balance</string>
    <string name="back">Back</string>
    <string name="credits_reset">Credits restored</string>

    <string name="hold_and_win">HOLD &amp; WIN</string>
    <string name="respins_left">RESPINS</string>
    <string name="collect">COLLECT</string>
    <string name="big_win">BIG WIN</string>
    <string name="mega_win">MEGA WIN</string>
    <string name="jackpot">JACKPOT</string>
    <string name="not_enough">Not enough credits</string>

    <string name="privacy_url">https://trainsprinnt.com/privacy-policy.html</string>
    <string name="support_url">https://trainsprinnt.com/support.html</string>
</resources>
